--- a/info.toml
+++ b/info.toml
@@ -1,8 +1,8 @@
 [meta]
 name = "Altered WR Reporter"
 author = "kovacs@the418.io"
-category = "Yes"
-version = "0.1.0"
+category = "Utilities"
+version = "0.2.0"
 
 [script]
 dependencies = ["MLHook"]
